<resources>
    <string name="app_name">Assign Four 2017 John Bukley</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_search">Search</string>
    <string name="action_send">Send</string>
    <string name="action_event">Event</string>
    <string name="action_quit">Quit</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_about">About</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_message">WELCOME TO DCU PIZZA RESTAURANT</string>
    <string name="opening">Opening Times:</string>
    <string name="opening_hours">Mon-Sat 10:30am-10:30pm</string>

    <!--Pizza Names -->
    <string name="pizza1">BBQ</string>
    <string name="pizza2">Calzone</string>
    <string name="pizza3">Hawaiian</string>
    <string name="pizza4">Pepperoni</string>
    <string name="pizza5">Margherita</string>
    <string name="pizza6">Chicken</string>

    <!--Pizza Descriptions -->
    <string name="pizza1Desc">BBQ Pork,BBQ sauce, Ham</string>
    <string name="pizza2Desc">Mozzarella, Salami, Ham, Parmesan</string>
    <string name="pizza3Desc">Ham, Pinapple, Sweetcorn</string>
    <string name="pizza4Desc">Pepperoni,Mozzarella, Tomatoe Sauce</string>
    <string name="pizza5Desc">Mozzarella, Tomatoe Sauce</string>
    <string name="pizza6Desc">Chicken,Peppers,Sweet Chili sauce</string>

    <!--Pizza Order -->
    <string name="enter_your_name">Enter your name</string>
    <string name="toppings">TOPPINGS</string>
    <string name="toppings_summary">TOPPINGS SUMMARY</string>
    <string name="quantity">QUANTITY</string>
    <string name="summary">SUMMARY</string>
    <string name="order">ORDER</string>
    <string name="thank_you">Thank you</string>

    <!--Pizza Toppings -->
    <string name="extra_cheese">Extra Chees</string>
    <string name="onions">Onions</string>
    <string name="mushrooms">Mushrooms</string>

    <!--Spinner Array -->
    <string-array name="ui_number_entries">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <!--Preference Strings -->
    <string name="preferencesTitle">Application Preferences</string>

    <string name="customerName_preference">Customer Name</string>
    <string name="namedialog">Change User Name</string>
    <string name="customerNamePrompt">Enter Your User Name</string>

    <string name="password_preference">Password</string>
    <string name="passdialog">Change Password</string>
    <string name="passwordPrompt">Enter your password</string>

    <string name="email_preference">Email</string>
    <string name="emaildialog">Change Email Address</string>
    <string name="emailPrompt">Enter your email address</string>

    <string name="loyalty_member">Loyalty Member</string>
</resources>
