<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/layoutchild1"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
    <TextView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/welcome_message"
        android:layout_weight="2"
        android:gravity="left"

        android:padding="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/opening"
        android:layout_weight="2"
        android:gravity="left"
        android:padding="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/opening_hours"
        android:layout_weight="2"
        android:gravity="left"
        android:padding="16dp" />

    <ImageView
        android:id="@+id/imageRestaurant"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/restaurantphoto"
        android:orientation="horizontal"
        />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingbutton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@android:drawable/ic_dialog_email" />

</RelativeLayout>
